--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
     <h1>Acerte o número secreto</h1>
     <h3>O número secreto está entre <span class="menor-valor"> 0 </span> e <span class="maior-valor"> 100 </span></h3>
 
-    <div id="chute" class="mensagem">
-        <!-- <div>Você disse:</div>
-        <span class="box">20</span>
-        <div>O número secreto é maior <i class="fa-solid fa-arrow-up"></i></div> -->
-    </div>
+    <div id="chute" class="mensagem"></div>
 </body>
 </html>
